Fixed image url

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,6 @@
 	</nav>
 </header>
 <div class="header-img">
-    <img src="{{ site.baseurl }}/{{ site.theme.header_image }}">
+    <img src="{{ site.theme.header_image }}">
 </div>
 
