Added facebook thumbnail option for posts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,9 @@
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.theme.description }}{% endif %}">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-Frame-Options" content="sameorigin">
+	{% if page.facebook_image %}
+	<meta property="og:image" content="{{ site.url }}{{ site.baseurl }}{{ page.facebook_image }}">
+	{% endif %}
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
